update css and category user

--- a/admin/profile.html
+++ b/admin/profile.html
@@ -113,6 +113,7 @@
 
     <script type="module">
       import { userAdmin } from "../data/adminData.js";
+      let users = userAdmin;
 
       // Hàm cập nhật thông tin người dùng
       function updateProfile() {
