--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="./index.html"><img src="./assets/img/logo.png" alt="" /></a>
+        <a href="./index.html"
+          ><img src="./assets/img/header-logo.png" alt=""
+        /></a>
       </div>
       <div class="header-content">
         <div class="category">
@@ -97,67 +99,7 @@
       <div class="news">
         <div class="main-content">
           <div class="news-content">
-            <div class="blog-part">
-              <div class="blog">
-                <a href=""
-                  ><img src="./assets/img/new1.png" alt="" class="blog-img"
-                /></a>
-                <h3 class="blog-title">
-                  <a href=""
-                    >Zverev chiến thắng 3-0 ở trận mở màn tại Acapulco, Rune
-                    tiến xa</a
-                  >
-                </h3>
-                <p class="blog-comment">
-                  Tại Giải quần vợt Abierto Mexicano Telcel 2025 ở Acapulco,
-                  Alexander Zverev đã có những màn trình diễn ấn tượng trong
-                  trận mở màn.
-                </p>
-              </div>
-              <div class="subblog">
-                <div class="subblog-content">
-                  <a href=""
-                    ><img
-                      src="./assets/img/subblog1.png"
-                      alt=""
-                      class="subblog-img"
-                  /></a>
-                  <h3 class="subblog-title">
-                    <a href=""
-                      >Rune, Tiafoe "ra khơi và giao bóng" khi sân đấu nổi mang
-                      tính biểu tượng của Acapulco trở lại.</a
-                    >
-                  </h3>
-                </div>
-                <div class="subblog-content">
-                  <a href=""
-                    ><img
-                      src="./assets/img/subblog2.png"
-                      alt=""
-                      class="subblog-img"
-                  /></a>
-                  <h3 class="subblog-title">
-                    <a href=""
-                      >Ngôi sao của Na Uy - Budkov Kjaer là vận động viên “trẻ
-                      tuổi nhất”
-                    </a>
-                  </h3>
-                </div>
-                <div class="subblog-content">
-                  <a href=""
-                    ><img
-                      src="./assets/img/subblog3.png"
-                      alt=""
-                      class="subblog-img"
-                  /></a>
-                  <h3 class="subblog-title">
-                    <a href=""
-                      >Tien gây sốc với Zverev ở Acapulco, thác Shelton</a
-                    >
-                  </h3>
-                </div>
-              </div>
-            </div>
+            <div class="blog-part"></div>
             <div class="news-list">
               <div class="news-item">
                 <span class="news-category">Tin sốt dẻo</span>
@@ -236,95 +178,11 @@
         <div class="main-content">
           <div class="daily-part">
             <h2 class="daily-part__title">TIN TỨC TRONG NGÀY</h2>
-            <div class="daily-news">
-              <div class="daily">
-                <a href=""
-                  ><img src="./assets/img/daily.png" alt="" class="daily-img"
-                /></a>
-                <h3 class="daily-title">
-                  <a href="">Mục tiêu tiếp theo của được hé lộ </a>
-                </h3>
-                <p class="daily-comment">
-                  Blockx-buster: Thiếu niên “thiên tài” người Bỉ nhắm đến Chung
-                  kết ATP tiếp theo.
-                </p>
-              </div>
-              <div class="daily-list">
-                <div class="daily-item">
-                  <h3 class="daily-item__title">
-                    <a href=""
-                      >Tiền vượt qua Norrie ở Acapulco trong trận ra mắt
-                      chính</a
-                    >
-                  </h3>
-                </div>
-
-                <div class="daily-item">
-                  <h3 class="daily-item__title">
-                    <a href=""
-                      >Ugo Carabelli vươn lên đỉnh cao sự nghiệp sau giải Rio,
-                      Người dẫn đầu tuần</a
-                    >
-                  </h3>
-                </div>
-
-                <div class="daily-item">
-                  <h3 class="daily-item__title">
-                    <a href=""
-                      >Garin tuyên bố giành chiến thắng mở màn ở Santiago</a
-                    >
-                  </h3>
-                </div>
-              </div>
-            </div>
+            <div class="daily-news"></div>
           </div>
           <div class="breaking-part">
             <h2 class="breaking-part__title">TIN ĐÁNG CHÚ Ý</h2>
-            <div class="breaking-news">
-              <div class="breaking">
-                <a href=""
-                  ><img
-                    src="./assets/img/breaking.png"
-                    alt=""
-                    class="breaking-img"
-                /></a>
-                <h3 class="breaking-title">
-                  <a href="">Vào ngày này: Djokovic vượt qua Graf </a>
-                </h3>
-                <p class="breaking-comment">
-                  Tuần thứ 378 của Serbia ở vị trí số 1 đã phá vỡ dấu ấn của
-                  Graf
-                </p>
-              </div>
-              <div class="breaking-list">
-                <div class="breaking-item">
-                  <h3 class="breaking-item__title">
-                    <a href=""
-                      >Net Zero: Comesana hạ cánh khẩn cấp để giành được chiến
-                      thắng thần kỳ ở Rio</a
-                    >
-                  </h3>
-                </div>
-
-                <div class="breaking-item">
-                  <h3 class="breaking-item__title">
-                    <a href=""
-                      >Cilic làm choáng váng De Minaur ở Dubai, Halys đánh bại
-                      cựu vô địch Rublev</a
-                    >
-                  </h3>
-                </div>
-
-                <div class="breaking-item">
-                  <h3 class="breaking-item__title">
-                    <a href=""
-                      >Đương kim vô địch Humbert, hạt giống hàng đầu Medvedev
-                      trong số những danh hiệu trở lại ở Dubai</a
-                    >
-                  </h3>
-                </div>
-              </div>
-            </div>
+            <div class="breaking-news"></div>
           </div>
         </div>
       </div>
@@ -395,20 +253,147 @@
     </footer>
 
     <!-- JS -->
-    <script>
-      //Search
-      function searchGoogle(event) {
-        event.preventDefault();
-        let query = document.getElementById("search-input").value;
-        if (query.trim() !== "") {
-          let searchUrl = `https://www.google.com/search?q=site:www.24h.com.vn "${query}"`;
-          window.open(searchUrl, "_blank"); // Mở trong tab mới
-        }
-      }
-    </script>
+
     <script src="./assets/js/headerLogined.js"></script>
     <script src="./assets/js/headerNotLogin.js"></script>
     <script src="./assets/js/header.js"></script>
+    <script type="module">
+      import { newsData } from "./data/newsData.js";
+
+      function renderNewsSection() {
+        const newsList = document.querySelector(".blog-part");
+        if (!newsData || newsData.length === 0) {
+          newsList.innerHTML = "<p>Không có bài viết nào.</p>";
+          return;
+        }
+        const sortedNews = [...newsData].sort((a, b) => b.id - a.id);
+        const mainBlog = sortedNews[0];
+        const subBlogs = sortedNews.slice(1, 4);
+
+        newsList.innerHTML = `
+    <div class="blog">
+      <a href="news-detail.html?id=${mainBlog.id}">
+        <img src="${mainBlog.image}" alt="${mainBlog.title}" class="blog-img"/>
+      </a>
+      <h3 class="blog-title">
+        <a href="news-detail.html?id=${mainBlog.id}">${mainBlog.title}</a>
+      </h3>
+      <p class="blog-comment">${mainBlog.description}</p>
+    </div>
+    <div class="subblog">
+      ${subBlogs
+        .map(
+          (news) => `
+          <div class="subblog-content">
+            <a href="news-detail.html?id=${news.id}">
+              <img src="${news.image}" alt="${news.title}" class="subblog-img"/>
+            </a>
+            <h3 class="subblog-title">
+              <a href="news-detail.html?id=${news.id}">${news.title}</a>
+            </h3>
+          </div>`
+        )
+        .join("")}
+    </div>
+  `;
+      }
+      document.addEventListener("DOMContentLoaded", renderNewsSection);
+
+      function renderDailyNews() {
+        const dailyNewsContainer = document.querySelector(".daily-news");
+        if (!dailyNewsContainer) return;
+
+        const sortedNews = [...newsData].sort((a, b) => b.id - a.id);
+        const latestNews = sortedNews[0];
+        const nextNews = sortedNews.slice(1, 4);
+
+        if (!latestNews || nextNews.length < 3) {
+          dailyNewsContainer.innerHTML = `<p>Không có tin tức để hiển thị.</p>`;
+          return;
+        }
+        dailyNewsContainer.innerHTML = `
+          <div class="daily">
+            <a href="news-detail.html?id=${latestNews.id}">
+              <img src="${latestNews.image}" alt="${
+          latestNews.title
+        }" class="daily-img">
+            </a>
+            <h3 class="daily-title">
+              <a href="news-detail.html?id=${latestNews.id}">${
+          latestNews.title
+        }</a>
+            </h3>
+            <p class="daily-comment">${latestNews.description}</p>
+          </div>
+          <div class="daily-list">
+            ${nextNews
+              .map(
+                (news) => `
+              <div class="daily-item">
+                <h3 class="daily-item__title">
+                  <a href="news-detail.html?id=${news.id}">${news.title}</a>
+                </h3>
+              </div>
+            `
+              )
+              .join("")}
+          </div>
+        `;
+      }
+      renderDailyNews();
+
+      function renderBreakingNews() {
+        const breakingNewsContainer = document.querySelector(".breaking-news");
+
+        if (!newsData || newsData.length === 0) {
+          breakingNewsContainer.innerHTML = `<p>Không có tin tức nào.</p>`;
+          return;
+        }
+
+        // Trộn mảng ngẫu nhiên (Fisher-Yates shuffle)
+        const shuffledNews = [...newsData].sort(() => Math.random() - 0.5);
+
+        // Lấy tin đầu tiên làm breaking news
+        const latestNews = shuffledNews[0];
+
+        // Lấy 3 tin tiếp theo
+        const nextThreeNews = shuffledNews.slice(1, 4);
+
+        breakingNewsContainer.innerHTML = `
+          <div class="breaking">
+            <a href="news-detail.html?id=${latestNews.id}">
+              <img src="${
+                latestNews.image
+              }" alt="Breaking News" class="breaking-img">
+            </a>
+            <h3 class="breaking-title">
+              <a href="news-detail.html?id=${latestNews.id}">${
+          latestNews.title
+        }</a>
+            </h3>
+            <p class="breaking-comment">${latestNews.description}</p>
+          </div>
+          <div class="breaking-list">
+            ${nextThreeNews
+              .map(
+                (news) => `
+              <div class="breaking-item">
+                <h3 class="breaking-item__title">
+                  <a href="news-detail.html?id=${news.id}">${news.title}</a>
+                </h3>
+              </div>
+            `
+              )
+              .join("")}
+          </div>
+        `;
+      }
+      document.addEventListener("DOMContentLoaded", function () {
+        renderBreakingNews();
+      });
+    </script>
+
+    <!-- ======================= slider ====================== -->
     <script>
       let index = 0;
       const slides = document.querySelector(".slides");
