--- a/account-detail.html
+++ b/account-detail.html
@@ -21,7 +21,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="./index.html"><img src="./assets/img/logo.png" alt="" /></a>
+        <a href="./index.html"
+          ><img src="./assets/img/header-logo.png" alt=""
+        /></a>
       </div>
       <div class="header-content">
         <div class="category">
@@ -58,6 +60,8 @@
         </div>
       </div>
     </header>
+    <!-- Popup -->
+    <div id="login-popup"></div>
     <main>
       <div class="main-content">
         <!-- sub-menu-container -->
