--- a/saved-news.html
+++ b/saved-news.html
@@ -21,7 +21,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="./index.html"><img src="./assets/img/logo.png" alt="" /></a>
+        <a href="./index.html"
+          ><img src="./assets/img/header-logo.png" alt=""
+        /></a>
       </div>
       <div class="header-content">
         <div class="category">
