--- a/category-news.html
+++ b/category-news.html
@@ -198,7 +198,7 @@
     <script src="./assets/js/category-news.js"></script>
     <!-- Lặp qua từng danh mục -->
     <script type="module">
-      import { newsData } from "./data/newsData.js";
+      // import { newsData } from "./data/newsData.js";
 
       function renderNewsBySection() {
         const sections = {};
@@ -260,7 +260,7 @@
       document.addEventListener("DOMContentLoaded", renderNewsBySection);
     </script>
     <script type="module">
-      import { newsData } from "./data/newsData.js";
+      // import { newsData } from "./data/newsData.js";
       import { categoryData } from "./data/categoryData.js";
 
       document.addEventListener("DOMContentLoaded", function () {
