--- a/login/login_admin.html
+++ b/login/login_admin.html
@@ -129,7 +129,7 @@
         showNotification("Đăng nhập thành công!", "success");
 
         setTimeout(() => {
-          window.location.href = "./admin/admin.html";
+          window.location.href = "../admin/admin.html";
         }, 1000);
       }
 
