--- a/login/login_nor.html
+++ b/login/login_nor.html
@@ -137,7 +137,7 @@
         localStorage.setItem("currentUser", JSON.stringify(user));
 
         showNotification("Đăng nhập thành công!", "success");
-        window.location.href = "./index.html";
+        window.location.href = "../index.html";
       }
 
       // Hiển thị / ẩn mật khẩu
