--- a/admin/user-management.html
+++ b/admin/user-management.html
@@ -242,6 +242,9 @@
             }
             const avatarElement = document.querySelector("#avatar-img");
             if (avatarElement) {
+              if (user.avatar.startsWith("/")) {
+                user.avatar = ".." + user.avatar;
+              }
               avatarElement.src = user.avatar;
             }
           }
