--- a/admin/create-category.html
+++ b/admin/create-category.html
@@ -145,6 +145,9 @@
             // Cập nhật Avatar
             const avatarElement = document.querySelector("#avatar-img");
             if (avatarElement) {
+              if (user.avatar.startsWith("/")) {
+                user.avatar = ".." + user.avatar;
+              }
               avatarElement.src = user.avatar;
             }
           }
