--- a/admin/edit-news.html
+++ b/admin/edit-news.html
@@ -264,6 +264,9 @@
             // Cập nhật Avatar
             const avatarElement = document.querySelector("#avatar-img");
             if (avatarElement) {
+              if (user.avatar.startsWith("/")) {
+                user.avatar = ".." + user.avatar;
+              }
               avatarElement.src = user.avatar;
             }
           }
