--- a/admin/profile.html
+++ b/admin/profile.html
@@ -42,9 +42,11 @@
             <div class="menu-item">
               <a href="./suggestion.html">QUẢN LÝ GÓP Ý</a>
             </div>
-
             <div class="menu-item">
               <a href="./profile.html">HỒ SƠ CÁ NHÂN</a>
+            </div>
+            <div class="menu-item">
+              <a id="logout-btn">ĐĂNG XUẤT</a>
             </div>
           </div>
         </div>
@@ -117,7 +119,15 @@
 
       // Hàm cập nhật thông tin người dùng
       function updateProfile() {
-        const user = users[0]; // Giả sử chỉ có một người dùng trong danh sách
+        if (!users || users.length === 0) return;
+
+        const user = users[0]; // Lấy thông tin user đầu tiên
+
+        // Kiểm tra và chỉnh sửa đường dẫn avatar nếu cần
+        let avatarPath = user.avatar;
+        if (avatarPath.startsWith("/")) {
+          avatarPath = ".." + avatarPath;
+        }
 
         // Cập nhật tên admin
         const adminName = document.querySelector(".admin-name");
@@ -128,7 +138,7 @@
         // Cập nhật avatar
         const adminAvatar = document.querySelector("#avatar-img");
         if (adminAvatar) {
-          adminAvatar.src = user.avatar; // Cập nhật ảnh avatar của user
+          adminAvatar.src = avatarPath; // Cập nhật ảnh avatar của user
         }
 
         // Cập nhật email
@@ -206,6 +216,22 @@
           saveUserData(); // Nếu chưa có dữ liệu, lưu mặc định vào localStorage
         }
       }
+
+      // Hàm xử lý đăng xuất
+      function logout() {
+        localStorage.clear();
+        window.location.href = "../login/login_admin.html";
+      }
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const logoutButton = document.getElementById("logout-btn");
+        if (logoutButton) {
+          logoutButton.addEventListener("click", (e) => {
+            e.preventDefault();
+            logout();
+          });
+        }
+      });
 
       // Gọi hàm cập nhật khi trang đã sẵn sàng
       document.addEventListener("DOMContentLoaded", () => {
