--- a/admin/user-management.html
+++ b/admin/user-management.html
@@ -46,6 +46,9 @@
             <div class="menu-item">
               <a href="./profile.html">HỒ SƠ CÁ NHÂN</a>
             </div>
+            <div class="menu-item">
+              <a id="logout-btn">ĐĂNG XUẤT</a>
+            </div>
           </div>
         </div>
         <div class="right-admin">
@@ -250,6 +253,28 @@
           }
         }
       }
+
+      // Hàm xử lý đăng xuất
+      function logout() {
+        localStorage.clear();
+        window.location.href = "../login/login_admin.html";
+      }
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const logoutButton = document.getElementById("logout-btn");
+        if (logoutButton) {
+          logoutButton.addEventListener("click", (e) => {
+            e.preventDefault();
+            logout();
+          });
+        }
+      });
+
+      // Gọi hàm cập nhật khi trang đã sẵn sàng
+      document.addEventListener("DOMContentLoaded", () => {
+        loadUserData(); // Tải lại dữ liệu người dùng khi trang được load
+        updateProfile(); // Cập nhật thông tin người dùng
+      });
 
       document.addEventListener("DOMContentLoaded", () => {
         initializeUserData();
