--- a/account-detail.html
+++ b/account-detail.html
@@ -236,7 +236,7 @@
     <footer class="footer">
       <div class="main-content">
         <div class="left-footer">
-          <img src="./assets/img/logo-footer.png" alt="" class="logo" />
+          <img src="./assets/img/footer-logo.png" alt="" class="logo" />
           <div class="media">
             <a href=""><img src="./assets/img/facebook.svg" alt="" /></a>
             <a href=""><img src="./assets/img/youtube.svg" alt="" /></a>
