--- a/admin/news-management.html
+++ b/admin/news-management.html
@@ -89,9 +89,10 @@
               <div class="search-section">
                 <select id="news-type" class="input-field">
                   <option>Chọn kiểu tin tức</option>
-                  <option>Thể thao</option>
-                  <option>Giải đấu</option>
-                  <option>Vận động viên</option>
+                  <option>Đời sống</option>
+                  <option>Khoảng khắc đáng nhớ</option>
+                  <option>Người nổi tiếng</option>
+                  <option>Hồi ức</option>
                 </select>
                 <input
                   type="text"
