--- a/login/login_admin.html
+++ b/login/login_admin.html
@@ -147,7 +147,7 @@
         showNotification("Đăng nhập thành công!", "success");
 
         setTimeout(() => {
-          window.location.href = "../admin/admin.html";
+          window.location.href = "../admin/user-management.html";
         }, 1000);
       }
 
