--- a/saved-news.html
+++ b/saved-news.html
@@ -50,9 +50,21 @@
             <h2><a href="./index.html">TRANG CHỦ</a></h2>
           </div>
 
-          <div class="category-item">
+          <div class="category-item news-dropdown">
             <img src="./assets/img/news.svg" alt="" />
             <h2><a href="./category-news.html">TIN TỨC</a></h2>
+            <ul class="news-dropdown-menu">
+              <li><a href="./category-news.html?category=1">Đời sống</a></li>
+              <li>
+                <a href="./category-news.html?category=2"
+                  >Khoảnh khắc đáng nhớ</a
+                >
+              </li>
+              <li>
+                <a href="./category-news.html?category=3">Người nổi tiếng</a>
+              </li>
+              <li><a href="./category-news.html?category=4">Hồi ức</a></li>
+            </ul>
           </div>
 
           <div class="category-item">
